--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <title>Curso Javascript Completo</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" type="text/css" href="css/materialize.min.css">
-  <link rel="stylesheet" type="text/css" href="css/estilo.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/materialize.min.css">
+  <link rel="stylesheet" type="text/css" href="./assets/css/estilo.css">
 
 </head>
 
